src/compiler/parse/snapshots/rlox__compiler__parse__parser__errors__rparens.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print 1);\\n\")"
---
stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1);
   │ ──┬──  ┬  
   │   ╰─────── This statement should be terminated with ;
   │        │  
   │        ╰── Expected ;
───╯


